Assets/css/style.css
html{
    position: relative;
}
 
html, body{
    justify-content: center;
    font-family: Arial, Helvetica, sans-serif;
    color: #777777;
    background: url("../images/trees.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
}
 
h1, h2, h3, h4, h5, h6{
    font-family: Georgia, 'Times New Roman', Times, sans-serif;
    color: #4aaaa5;
}
 
a{
    text-decoration: none;
}
 
h1{
    font-size: 2em;
}
 
h2{
    font-size: 1em;
}
 
/***layout***/
 
 
 
header{
    width: 100%;
    height: auto;
    border-bottom: 2px solid #cccccc;
    background-color: #ffffff;
}
 
header .container{
    width: 960px;
    margin: 0 auto;
}
 
.name, .nav{
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    padding:0;
}
 
.name {
    width: 50%;
}
 
.logo{
    display: inline-block;
    font-weight: bold;
    font-size: 2em;
    letter-spacing: 0.04em;
    background-color: #4aaaa5;
    color: #ffffff;
    padding: 0em;
    width: auto;
}
 
.nav{
    width: 49%;
    text-align: right;
    color: #777777;
    font-weight: normal;
   
}
 
.nav ul li{
    position: relative;
    display: inline-block;
    padding-left: 1em;
    margin-left: 1em;
 
}
.nav ul li a{
    color: #777777;
    text-decoration: none;
  
}
 
.nav ul li a:hover{
    color: #ffffff;
    background: #4aaaa5;
    padding: 5px;
    transition: .5s;
}
 
.nav ul li a.active{
    color: black;
}
.nav ul li a.focus{
    color: black;
}
 
.nav ul li+li{
    border-left: 1px solid #cccccc;
}
 
 
/***main box content***/
 
.content{
    width: 960px;
    clear: both; 
    margin: 0 auto 6em auto;
}
 
.main{
    display: inline-block;
    width: 700px;
    margin: 70px 0;
    padding: 40px;
    background-color: #ffffff;
    border: 1px solid #dddddd;
}
 
.main h2 {
    font-size: 2em;
    font-weight: bold;
    padding-bottom: 1em;
    margin-bottom: 0.8em;
    border-bottom: 2px solid #dddddd;
}
 
.main p {
    font-size: 14px;
    line-height: 1.75em;
    margin-bottom: 2em;
}
 
img.about-photo {
    float: left;
    padding: 0 1em 1em 0;
    width: 160px;
    height: 160px;
}

.info {
    position: relative;
    background-color: white;
    display: inline-block;
    width: 693px;
    height: 160px;
    margin: 3px 3px 3px 3px;
    padding: 40px;
    border: 1px solid #dddddd;
    color: black;    
}

.inforoot {
    background-color: #4aaaa5;
    border: 1px solid #dddddd;
    height: 250px;
    width: 780px;
    text-align: center; 
}
  
/****portfolio***/
.image-port{  
    width: 230px;
    height: 160px;
}
 
 
.portfolio-item{
    display: inline-block;
    position: relative;
    width: 230px;
    height: 160px;
    left: 55px;
}
 
.portfolio-item:nth-child(even){
    margin-left: 10px;
    margin-right: 10px;
}
 
.item-name{
    position: relative;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 21px;
    top: -75px;
    height: 16%;
    text-align: center;
    padding: 7px 0 0 0;
    background-color: #4aaaa5;
    padding: -1em;
    color: #ffffff;
    z-index: 900;
}
 
 
footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    padding: 4px;
    max-height: 20px;
    text-align: center;
    font-size: 0.8em;
    color: #cccccc;
    background-color: #666666;
    border-top: 8px solid #4aaaa5;
}
 
/***contact***/
 
 
#message{
    height: 300px;
}
 
.contact{
    width: 500px;
}
 
.contact input, .contact textarea{
    width: 100%;
    font-family: Arial, Helvetica, sans-serif;
    display: block;
    border: 2px solid #cccccc;
    margin-bottom: 1.5em;
    padding: 1em;
    font-size: 16px;
}
 
.contact button {
    width: auto;
    background-color: #4aaaa5;
    color: #ffffff;
    border: none;
    padding: 1em 2em;
    font-size: 1em;
    margin: 0 auto;
}
 
::placeholder {
    color: #cccccc;
  }

